--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "url-loader": "^0.5.7",
     "vue-bulma-breadcrumb": "^1.0.1",
     "vue-bulma-card": "^1.0.2",
+    "vue-bulma-chartjs": "^1.0.4",
     "vue-bulma-collapse": "^1.0.3",
     "vue-bulma-expanding": "0.0.1",
     "vue-bulma-tooltip": "^1.0.3",
