--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-webpack-ts-simple",
+  "name": "dashboard",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "paul van bladel <paul.vanbladel@gmail.com>",
@@ -23,6 +23,7 @@
     "@types/mocha": "^2.2.40",
     "@types/node": "^7.0.10",
     "@types/sinon": "^1.16.36",
+    "admission-client": "git+ssh://git@gitlab.com:ECloud/admission-client.git",
     "animate.css": "^3.5.2",
     "autoprefixer": "^6.7.2",
     "bulma": "^0.4.0",
@@ -48,6 +49,7 @@
     "file-loader": "^0.10.0",
     "font-awesome": "^4.7.0",
     "friendly-errors-webpack-plugin": "^1.1.3",
+    "fs": "0.0.1-security",
     "function-bind": "^1.1.0",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
@@ -64,6 +66,7 @@
     "karma-webpack": "^2.0.2",
     "lolex": "^1.5.2",
     "mocha": "^3.2.0",
+    "net": "^1.0.2",
     "nightwatch": "^0.9.12",
     "node-sass": "^4.5.2",
     "opn": "^4.0.2",
@@ -76,6 +79,7 @@
     "semver": "^5.3.0",
     "sinon": "^1.17.7",
     "sinon-chai": "^2.8.0",
+    "tls": "0.0.1",
     "ts-loader": "^2.0.3",
     "tslint": "^4.5.1",
     "tslint-loader": "^3.4.3",
