--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "tslint-loader": "^3.4.3",
     "typescript": "^2.2.1",
     "url-loader": "^0.5.7",
+    "urlencode": "^1.1.0",
     "vue-bulma-breadcrumb": "^1.0.1",
     "vue-bulma-card": "^1.0.2",
     "vue-bulma-collapse": "^1.0.3",
