primer contacto con admission-client

--- a/package.json
+++ b/package.json
@@ -14,13 +14,11 @@
     "lint": "tslint src/**/*.ts"
   },
   "devDependencies": {
-    "@types/bluebird": "^3.5.8",
     "@types/chai": "^3.4.35",
     "@types/mocha": "^2.2.40",
-    "@types/node": "^7.0.10",
-    "@types/q": "^1.0.2",
-    "@types/request": "0.0.45",
+    "@types/node": "^8.0.8",
     "@types/sinon": "^2.3.2",
+    "acs-client": "git+ssh://git@gitlab.com:ECloud/acs-client.git#ticket820",
     "admission-client": "git+ssh://git@gitlab.com:ECloud/admission-client.git#ticket820",
     "animate.css": "^3.5.2",
     "autoprefixer": "^6.7.2",
