--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "admission-client": "git+ssh://git@gitlab.com:ECloud/admission-client.git#ticket820",
     "animate.css": "^3.5.2",
     "autoprefixer": "^6.7.2",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
     "babel-polyfill": "^6.23.0",
     "babel-runtime": "^6.23.0",
     "bulma": "^0.4.0",
@@ -81,6 +83,7 @@
     "ts-loader": "^2.0.3",
     "tslint": "^4.5.1",
     "tslint-loader": "^3.4.3",
+    "typed-event-emitter": "^1.0.3",
     "typescript": "^2.2.1",
     "url-loader": "^0.5.7",
     "urlencode": "^1.1.0",
