--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "vue-bulma-collapse": "^1.0.3",
     "vue-bulma-expanding": "0.0.1",
     "vue-bulma-modal": "^1.0.1",
+    "vue-bulma-notification": "^1.1.1",
     "vue-bulma-tooltip": "^1.0.3",
     "vue-chartjs": "^2.6.5",
     "vue-class-component": "^5.0.0",
