--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.10.0",
+    "file-saver": "^1.3.3",
     "font-awesome": "^4.7.0",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "fs": "0.0.1-security",
