--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "unit-debug": "karma start test/unit/karma.conf.js --browsers=Chrome --auto-watch --no-colors",
     "lint": "tslint src/**/*.ts"
   },
-  "devDependencies": {
+  "dependencies": {
     "@types/chai": "^3.4.35",
     "@types/mocha": "^2.2.40",
     "@types/node": "^8.0.8",
