--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Single web page para Ecloud",
   "author": "Óscar Muñoz Garrigós <omunoz@iti.es>",
   "private": true,
+  "bin": "build/build.js",
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
