Chart, Sidebar, FAB and servercalls updated
The chart now is optimized and has a fixed x layer.
The sidebar now respods correcly when deploying or undeploying services.
The FAB is actually as it should be supposed to be.
The duplicated servercalls have been fixed and a list is checked before making the calls.

--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "vue-bulma-tooltip": "^1.0.3",
     "vue-chartjs": "^2.6.5",
     "vue-class-component": "^5.0.0",
+    "vue-fab": "^2.1.1",
     "vue-loader": "^11.1.4",
     "vue-nprogress": "^0.1.5",
     "vue-router": "^2.2.0",
