--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.1.0",
     "phantomjs-prebuilt": "^2.1.14",
+    "priorityqueue": "^0.2.0",
     "rimraf": "^2.6.0",
     "sass-loader": "^6.0.3",
     "selenium-server": "^3.0.1",
