recovered dependencies format

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@types/node": "^8.0.8",
     "@types/sinon": "^2.3.2",
     "@types/socket.io-client": "^1.4.29",
-    "acs-client": "git+ssh://git@gitlab.com/ECloud/acs-client.git#master",
-    "admission-client": "git+ssh://git@gitlab.com/ECloud/admission-client.git#master",
+    "acs-client": "git+ssh://git@gitlab.com:ECloud/acs-client.git#master",
+    "admission-client": "git+ssh://git@gitlab.com:ECloud/admission-client.git#master",
     "animate.css": "^3.5.2",
     "autoprefixer": "^6.7.2",
     "babel-core": "^6.25.0",
