--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dashboard",
   "version": "0.5.1",
   "description": "Single web page for E-Cloud",
-  "author": "Óscar Muñoz Garrigós <omunoz@iti.es>",
+  "author": "Óscar Muñoz Garrigós <osmuogar@inf.upv.es>",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
@@ -42,6 +42,7 @@
     "cross-env": "^3.1.4",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.26.1",
+    "d3": "^5.0.0",
     "eslint": "^3.18.0",
     "eslint-config-standard": "^6.2.1",
     "eslint-friendly-formatter": "^2.0.7",
@@ -61,6 +62,7 @@
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
     "inject-loader": "^2.0.1",
+    "jquery": "^3.3.1",
     "jszip": "^3.1.3",
     "karma": "^1.4.1",
     "karma-chrome-launcher": "^2.0.0",
@@ -104,9 +106,12 @@
     "vue-chartjs": "^2.6.5",
     "vue-class-component": "^6.1.0",
     "vue-fab": "^2.1.1",
+    "vue-i18n": "^7.6.0",
     "vue-loader": "^11.1.4",
+    "vue-morris": "0.0.13",
     "vue-nprogress": "^0.1.5",
     "vue-router": "^2.2.0",
+    "vue-select": "^2.4.0",
     "vue-style-loader": "^2.0.0",
     "vue-template-compiler": "^2.2.4",
     "vuetify": "^0.16.9",
