--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
   "devDependencies": {
     "@types/chai": "^3.4.35",
     "@types/mocha": "^2.2.40",
-    "@types/node": "^8.0.8",
+    "@types/node": "^8.10.2",
     "@types/sinon": "^2.3.2",
-    "@types/socket.io-client": "^1.4.29",
+    "@types/socket.io": "^1.4.33",
+    "@types/socket.io-client": "^1.4.32",
     "acs-client": "git+ssh://git@gitlab.com:ECloud/acs-client.git#master",
     "admission-client": "git+ssh://git@gitlab.com:ECloud/admission-client.git#master",
     "animate.css": "^3.5.2",
@@ -51,7 +52,7 @@
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
+    "express": "^4.16.3",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.10.0",
     "file-saver": "^1.3.3",
@@ -132,5 +133,6 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "dependencies": {}
 }
