--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^2.0.2",
     "lolex": "^1.5.2",
+    "metismenu": "^2.7.4",
     "mocha": "^3.2.0",
     "net": "^1.0.2",
     "nightwatch": "^0.9.12",
@@ -133,8 +134,5 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ],
-  "dependencies": {
-    "metismenu": "^2.7.4"
-  }
+  ]
 }
