--- a/package.json
+++ b/package.json
@@ -25,19 +25,19 @@
     "admission-client": "git+ssh://git@gitlab.com:ECloud/admission-client.git#master",
     "animate.css": "^3.5.2",
     "autoprefixer": "^6.7.2",
-    "babel-core": "^6.25.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.1",
     "babel-plugin-istanbul": "^4.1.1",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.3.2",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "babel-runtime": "^6.23.0",
     "chai": "^3.5.0",
     "chalk": "^1.1.3",
-    "chart.js": "^2.6.0",
-    "chromedriver": "^2.27.2",
+    "chart.js": "^2.7.2",
+    "chromedriver": "^2.40.0",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^3.1.4",
@@ -53,13 +53,13 @@
     "fs": "0.0.1-security",
     "function-bind": "^1.1.0",
     "html-webpack-plugin": "^2.28.0",
-    "http-proxy-middleware": "^0.17.3",
+    "http-proxy-middleware": "^0.18.0",
     "inject-loader": "^2.0.1",
     "jquery": "^3.3.1",
     "jszip": "^3.1.3",
     "karma": "^1.4.1",
     "karma-chrome-launcher": "^2.0.0",
-    "karma-coverage": "^1.1.1",
+    "karma-coverage": "^1.1.2",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-phantomjs-shim": "^1.4.0",
@@ -72,11 +72,11 @@
     "mocha": "^3.2.0",
     "net": "^1.0.2",
     "nightwatch": "^0.9.12",
-    "node-sass": "^4.5.2",
+    "node-sass": "^4.9.2",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.1.0",
-    "phantomjs-prebuilt": "^2.1.14",
+    "phantomjs-prebuilt": "^2.1.16",
     "priorityqueue": "^0.2.0",
     "rimraf": "^2.6.0",
     "sass-loader": "^6.0.3",
@@ -112,11 +112,11 @@
     "vuex": "^2.2.1",
     "vuex-router-sync": "^4.1.2",
     "webpack": "^2.2.1",
-    "webpack-bundle-analyzer": "^2.2.1",
+    "webpack-bundle-analyzer": "^2.13.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.16.1",
     "webpack-merge": "^2.6.1",
-    "wysiwyg.css": "0.0.2"
+    "wysiwyg.css": "0.0.3"
   },
   "engines": {
     "node": ">= 4.0.0",
@@ -126,5 +126,8 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "dependencies": {
+    "js-sha256": "^0.9.0"
+  }
 }
